samples/_failures_safe/1761296148_f5988d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bdd6f85.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_5bdd6f85.c:166:5: error: expected expression at end of input
  166 |     if (input == NULL ||
      |     ^~
./samples/SAFE/__tmp_5bdd6f85.c:166:5: error: expected declaration or statement at end of input
